; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/rcheevos/src/rcheevos/extr_condition.c_rc_test_condition.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/rcheevos/src/rcheevos/extr_condition.c_rc_test_condition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rc_test_condition(%struct.TYPE_3__* %0, i32 %1, i32 %2, i8* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32* %4, i32** %11, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 2
  %16 = load i32, i32* %9, align 4
  %17 = load i8*, i8** %10, align 8
  %18 = load i32*, i32** %11, align 8
  %19 = call i32 @rc_evaluate_operand(i32* %15, i32 %16, i8* %17, i32* %18)
  %20 = load i32, i32* %8, align 4
  %21 = add i32 %19, %20
  store i32 %21, i32* %12, align 4
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 1
  %24 = load i32, i32* %9, align 4
  %25 = load i8*, i8** %10, align 8
  %26 = load i32*, i32** %11, align 8
  %27 = call i32 @rc_evaluate_operand(i32* %23, i32 %24, i8* %25, i32* %26)
  store i32 %27, i32* %13, align 4
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  switch i32 %30, label %61 [
    i32 133, label %31
    i32 128, label %36
    i32 129, label %41
    i32 130, label %46
    i32 131, label %51
    i32 132, label %56
  ]

31:                                               ; preds = %5
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* %13, align 4
  %34 = icmp eq i32 %32, %33
  %35 = zext i1 %34 to i32
  store i32 %35, i32* %6, align 4
  br label %62

36:                                               ; preds = %5
  %37 = load i32, i32* %12, align 4
  %38 = load i32, i32* %13, align 4
  %39 = icmp ne i32 %37, %38
  %40 = zext i1 %39 to i32
  store i32 %40, i32* %6, align 4
  br label %62

41:                                               ; preds = %5
  %42 = load i32, i32* %12, align 4
  %43 = load i32, i32* %13, align 4
  %44 = icmp ult i32 %42, %43
  %45 = zext i1 %44 to i32
  store i32 %45, i32* %6, align 4
  br label %62

46:                                               ; preds = %5
  %47 = load i32, i32* %12, align 4
  %48 = load i32, i32* %13, align 4
  %49 = icmp ule i32 %47, %48
  %50 = zext i1 %49 to i32
  store i32 %50, i32* %6, align 4
  br label %62

51:                                               ; preds = %5
  %52 = load i32, i32* %12, align 4
  %53 = load i32, i32* %13, align 4
  %54 = icmp ugt i32 %52, %53
  %55 = zext i1 %54 to i32
  store i32 %55, i32* %6, align 4
  br label %62

56:                                               ; preds = %5
  %57 = load i32, i32* %12, align 4
  %58 = load i32, i32* %13, align 4
  %59 = icmp uge i32 %57, %58
  %60 = zext i1 %59 to i32
  store i32 %60, i32* %6, align 4
  br label %62

61:                                               ; preds = %5
  store i32 1, i32* %6, align 4
  br label %62

62:                                               ; preds = %61, %56, %51, %46, %41, %36, %31
  %63 = load i32, i32* %6, align 4
  ret i32 %63
}

declare dso_local i32 @rc_evaluate_operand(i32*, i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
